--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "types": "tsc --noEmit --allowJs *.js cypress/integration/*.js"
   },
   "peerDependencies": {
+    "@cypress/browserify-preprocessor": "*",
     "cypress": "*"
   },
   "repository": {
@@ -47,7 +48,6 @@
   },
   "private": false,
   "dependencies": {
-    "@cypress/browserify-preprocessor": "2.2.2",
     "debug": "4.1.1",
     "execa": "4.0.0",
     "globby": "11.0.0",
