--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+# https://circleci.com/docs/2.0/configuration-reference/
 version: 2.1
 orbs:
   cypress: cypress-io/cypress@1.13.0 # used to run e2e tests
@@ -18,7 +19,9 @@ jobs:
 workflows:
   build:
     jobs:
-      - cypress/install
+      - cypress/install:
+          post-steps:
+            - run: npm run check:markdown
       - cypress/run:
           name: frontend coverage
           requires:
@@ -66,6 +69,10 @@ workflows:
             - run: npx nyc report --check-coverage true --lines 100 --include test-backend/index.js
 
       - publish:
+          filters:
+            branches:
+              only:
+                - master
           requires:
             - frontend coverage
             - backend coverage
