--- a/examples/before-each-visit/package.json
+++ b/examples/before-each-visit/package.json
@@ -1,14 +1,10 @@
 {
   "name": "example-before-each-visit",
   "description": "Getting code coverage when cy.visit is used in beforeEach hook",
-  "devDependencies": {
-    "bin-up": "1.3.2",
-    "cypress": "4.1.0",
-    "istanbul-lib-coverage": "3.0.0",
-    "nyc": "15.0.0"
-  },
+  "devDependencies": {},
   "scripts": {
+    "cy:open": "../../node_modules/.bin/cypress open",
     "coverage:report using npx": "npx nyc report --report-dir ./coverage --temp-dir .nyc_output --reporter=lcov --reporter=clover --reporter=json",
-    "coverage:report": "bin-up nyc report --report-dir ./coverage --temp-dir .nyc_output --reporter=lcov --reporter=clover --reporter=json"
+    "coverage:report using bin-up": "bin-up nyc report --report-dir ./coverage --temp-dir .nyc_output --reporter=lcov --reporter=clover --reporter=json"
   }
 }
