--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start:test:backend": "nyc --silent node test-backend",
     "cy:backend": "cypress open --config-file cypress-backend.json",
     "dev:backend": "start-test start:test:backend 3003 cy:backend",
-    "check:markdown": "find *.md -exec npx markdown-link-check {} \\;"
+    "check:markdown": "find *.md -exec npx markdown-link-check {} \\;",
+    "effective:config": "circleci config process .circleci/config.yml | sed /^#/d"
   },
   "peerDependencies": {
     "cypress": "*",
@@ -50,6 +51,7 @@
   "private": false,
   "dependencies": {
     "@cypress/browserify-preprocessor": "2.1.4",
+    "bin-up": "1.3.2",
     "debug": "4.1.1",
     "execa": "4.0.0"
   },
