publish only if unit job passes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,7 @@ workflows:
               only:
                 - master
           requires:
+            - unit
             - frontend coverage
             - backend coverage
             - example-before-each-visit
