--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "effective:config": "circleci config process .circleci/config.yml | sed /^#/d"
   },
   "peerDependencies": {
-    "cypress": "*",
-    "nyc": "*",
-    "istanbul-lib-coverage": "*"
+    "cypress": "*"
   },
   "repository": {
     "type": "git",
@@ -52,22 +50,25 @@
   "private": false,
   "dependencies": {
     "@cypress/browserify-preprocessor": "2.1.4",
-    "bin-up": "1.3.2",
     "debug": "4.1.1",
-    "execa": "4.0.0"
+    "execa": "4.0.0",
+    "nyc": "15.0.0",
+    "istanbul-lib-coverage": "3.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@istanbuljs/nyc-config-typescript": "1.0.1",
     "babel-plugin-istanbul": "6.0.0",
     "cypress": "4.2.0",
     "express": "4.17.1",
-    "istanbul-lib-coverage": "3.0.0",
     "lodash": "4.17.15",
     "markdown-link-check": "3.8.0",
-    "nyc": "15.0.0",
     "parcel-bundler": "1.12.4",
     "prettier": "1.19.1",
     "semantic-release": "17.0.4",
-    "start-server-and-test": "1.10.11"
+    "serve": "11.3.0",
+    "source-map-support": "0.5.16",
+    "start-server-and-test": "1.10.11",
+    "typescript": "3.8.3"
   }
 }
