--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,10 +195,11 @@ workflows:
                 command: npx nyc report --check-coverage true --lines 100 --include unit-utils.js
                 working_directory: examples/same-folder
             - run:
-                command: node ../../scripts/check-coverage main.js
-                working_directory: examples/same-folder
-            - run:
-                command: node ../../scripts/check-coverage unit-utils.js
+                name: Check code coverage 📈
+                command: |
+                  node ../../scripts/check-coverage main.js
+                  node ../../scripts/check-coverage unit-utils.js
+                  node ../../scripts/only-covered main.js unit-utils.js
                 working_directory: examples/same-folder
 
       - publish:
