--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/core": "7.9.0",
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "babel-plugin-istanbul": "6.0.0",
+    "check-code-coverage": "1.0.1",
     "cypress": "4.3.0",
     "express": "4.17.1",
     "lodash": "4.17.15",
