fix: simpler TypeScript advice (#195)
* fix: and pass extension from package nyc object if provided

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,7 +219,8 @@ workflows:
                 name: Check code coverage 📈
                 command: |
                   ../../node_modules/.bin/check-coverage main.ts
-                  ../../node_modules/.bin/only-covered main.ts
+                  ../../node_modules/.bin/check-coverage calc.ts
+                  ../../node_modules/.bin/only-covered main.ts calc.ts
                 working_directory: examples/ts-example
 
       - cypress/run:
