Add simple webpack example (#204)
* add webpack example folder

* add webpack example

* add CI for use-webpack example

* call the right script

* store artifacts for use-webpack

* store artifacts using full folder for now

* try contains before typing

* try showing the console log messages

* fix variable print

* test with dev version of the orb

* use orb 1.19.2

* update readme files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # https://circleci.com/docs/2.0/configuration-reference/
 version: 2.1
 orbs:
-  cypress: cypress-io/cypress@1.17.1 # used to run e2e tests
+  cypress: cypress-io/cypress@1.19.2 # used to run e2e tests
   node: circleci/node@1.1.6 # used to publish new NPM version
 
 jobs:
@@ -257,6 +257,41 @@ workflows:
 
       - cypress/run:
           attach-workspace: true
+          name: example-use-webpack
+          requires:
+            - cypress/install
+          # there are no jobs to follow this one
+          # so no need to save the workspace files (saves time)
+          no-workspace: true
+          working_directory: examples/use-webpack
+          build: npm run build
+          start: npm start
+          wait-on: 'http://localhost:5000'
+          command: '../../node_modules/.bin/cypress run'
+          # wrong path when using working_directory
+          # https://github.com/cypress-io/circleci-orb/issues/265
+          # store screenshots and videos
+          # store_artifacts: true
+          post-steps:
+            - store_artifacts:
+                path: examples/use-webpack/cypress/videos
+            - store_artifacts:
+                path: examples/use-webpack/cypress/screenshots
+            # store the created coverage report folder
+            # you can click on it in the CircleCI UI
+            # to see live static HTML site
+            - store_artifacts:
+                path: examples/use-webpack/coverage
+            - run:
+                name: Check code coverage 📈
+                command: |
+                  ../../node_modules/.bin/check-coverage src/index.js
+                  ../../node_modules/.bin/check-coverage src/calc.js
+                  ../../node_modules/.bin/only-covered src/index.js src/calc.js
+                working_directory: examples/use-webpack
+
+      - cypress/run:
+          attach-workspace: true
           name: example-same-folder
           requires:
             - cypress/install
@@ -428,3 +463,4 @@ workflows:
             - example-one-spec
             - example-exclude-files
             - example-docker-paths
+            - example-use-webpack
